apps/calendar/style/ui.css
/* loading */

body.loading {
  visibility: hidden;
}

/* general elements */

a:active {
  border: none;
}

p {
  font-size: 1.5rem;
  line-height: 130%;
}

menu[type="toolbar"] a {
  text-decoration: none;
}

ol.link-list label,
ol.link-list a {
  display: block;
  min-height: 5.5rem;
  line-height: 5.5rem;
  font-size: 1.7rem;
  padding: 0 1.5rem;
  border-bottom: 0.1rem solid #C5C5C5;
  text-decoration: none;
  color: #000;
  margin: 0 1.5rem;
}

ol.link-list li:last-child label,
ol.link-list li:only-child label,
ol.link-list li:last-child a,
ol.link-list li:only-child a {
  border-bottom: 0;
}

/* view management */

#time-views {
  height: 100%;
}

#time-views > section {
  display: none;
  background: #fff;
  height: calc(100% - 9rem);
}

#time-views > section.active {
  display: block;
}

/* view loading */

.during-progress {
  display: none;
}

#views .in-progress .during-progress {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  z-index: 200;
  background-color: #CCC;
  opacity: 0.5;
  text-align: center;
}


/* view heights */

#time-views > #month-view {
  height: calc(65% - 5rem);
  box-shadow: 0px 5px 5px 0px rgba(1, 1, 1, 0.2);
  position: relative;
  z-index: 20;
}

#time-views > #months-day-view {
  height: calc(35% - 4rem);
}

#progress-indicator {
  position: absolute;
  top: 6.9rem;
  left: 0;
  width: 100%;
  height: 0.3rem;
  border: none;
  overflow: hidden;
  z-index: 1000;
  display: none;
}

.pending-operation #progress-indicator {
  display: block
}

#throbber {
  height: 5.2rem;
  background: url('ui/progress.png') repeat-x left bottom / 32rem !important;
  animation: .5s throb infinite steps(12);
}

@keyframes throb {
  from {
    transform: translate(0, 0);
  }
  to {
    transform: translate(0, -4.8rem);
  }
}

#advanced-settings-view .content {
  height: calc(100% - 5rem);
  overflow-y: scroll;
}

#advanced-settings-view .settings-list label {
  height: auto;
  margin: 0 1.5rem;
  padding: 0.5rem 0 1.5rem;
  line-height: 100%;
}

#advanced-settings-view .settings-list label span {
  display: block;
  position: relative;
  margin-bottom: 0;
  font-size: 1.9rem;
  line-height: 3.3rem;
}

#advanced-settings-view .settings-list label .button {
  height: 4rem;
}

#advanced-settings-view .settings-list label select {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: calc(100% + 3rem);
  padding: 0.8rem 1rem 0;
  font-size: 1.7rem;
  font-weight: 500;
}

#advanced-settings-view .settings-list label span:first-child {
  padding-left: 1.5rem;
}

#advanced-settings-view .settings-list label,
#advanced-settings-view .account-list a {
  text-transform: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: calc(100% - 3rem);
}

#advanced-settings-view .account-list a {
  padding-right: 4rem;
}

#advanced-settings-view .account-list .error a {
  background: transparent url('icons/accountwarning.png') no-repeat left;
  padding-left: 3.5rem;
}

#advanced-settings-view .preset:after {
  content: ' - '
}

#advanced-settings-view .user {
  width: 50%;
}

#advanced-settings-view header.account-list-header.active {
  display: block;
}

#advanced-settings-view header.account-list-header {
  display: none;
}

/* create account view */
#create-account-view > p {
  margin: 0 2rem;
}

.fullscreen-view.active {
  visibility: visible;
}

.fullscreen-view {
  z-index: 1000;
  overflow: hidden;
  visibility: hidden;
  /* completely override other views */
  background-color: #f4f4f4;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%
}

/* sub common: day headers, day boxes */

#month-days {
  overflow: scroll;
}

#month-view .month li,
#month-days li {
  width: 14.286%;
  line-height: 120%;
  -moz-user-select: none;
}

.rtl #month-days li,
.rtl #month-view .month li {
  float: right;
}

.ltr #month-days li,
.ltr #month-view .month li {
  float: left;
}

/* sub: day header row */

#month-days {
  overflow: hidden;
}

#week-view .day-header,
#month-days li {
  height: 2rem;
  color: white;
  text-align: center;
  background-color: #242931;
  text-transform: uppercase;
  font-size: 1.3rem;
  padding: 0.185rem 0;
  border-right: 0.1rem solid #131314;
  border-left: 0.1rem solid #515051;
}

#month-days li:first-child {
  border-left: none;
}

#month-days li:last-child {
  border-right: none;
}

body[data-path^="/month/"] section.month.next,
body[data-path^="/month/"] section.month.previous {
  display: block !important;
}

section.month {
  z-index: 200;
  height: 100%;
  position: absolute;
  color: #484848;
  width: 100%;
  border-left: 0.1rem solid #AAA;
  border-right: 0.1rem solid #AAA;
  display: none;
}

/* sub: day rows */

section.month.active {
  display: block;
}

section.month li > .day {
  font-size: 1.5rem;
  line-height: 140%;
}

.rtl section.month li {
  text-align: left;
}

.rtl section.month li > .day {
  padding-left: 0.296rem;
}

.ltr section.month li {
  text-align: right;
}

.ltr section.month li > .day {
  padding-right: 0.35rem;
}

section.month ol {
  height: calc(20% - (2rem / 5));
}

section.month.weeks-4 ol {
  height: calc(25% - (2rem / 4));
}

section.month.weeks-6 ol {
  height: calc(16.7% - (2rem / 6));
}

section.month li:first-child {
  border-left: none;
}

section.month li:last-child {
  border-right: none;
}

section.month li {
  padding-top: 0.3%;

  border-right: 0.1rem solid #A4A4A4;
  border-left: 0.1rem solid #FDFDFD;
  border-top: 0.1rem solid white;
  border-bottom: 0.1rem solid #9D9D9D;
  height: 100%;
  position: relative;
  background-color: white;
}

section.month ol:last-child li {
  border-bottom: none;
}

section.month li.past {
  background-color: #E6E6E6;
  color: #484848;
}

section.month li.present {
  background-color: #525963;
  box-shadow: inset 0.1rem 0.2rem 0.3rem 0 #333;
  color: white;
  border-left: none;
  border-top: none;
}

section.month li.future {
  background-color: #E6E6E6;
}

section.month li.selected {
  color: white !important;
  background-color: #1BA8C6 !important;
}

section.month li.past.other-month {
  background-color: #C1C1C1;
}

section.month li.future.other-month {
  background-color: #C1C1C1;
}



/* sub day rows: busy indicators */

section.month li .busy-indicator,
section.month li .busy-indicator > span{
  height: 0.8rem;
  padding-top: 0.37rem;
}

section.month li .busy-indicator {
  overflow: hidden;
  clear: both;
  bottom: 0;
  position: absolute;
  width: 100%;
}

section.month li .busy-indicator:before {
  /* &nsbp; */
  content:"\00a0";
}

section.month li .busy-indicator > span {
  top: 0;
  position: absolute;
  text-indent: -1000em;
}

/**
Indicators are in units of 12
*/
.busy-length-1 { width: 8.33%; }
.busy-length-2 { width: 16.66%; }
.busy-length-3 { width: 24.990000000000002%; }
.busy-length-4 { width: 33.32%; }
.busy-length-5 { width: 41.65%; }
.busy-length-6 { width: 49.980000000000004%; }
.busy-length-7 { width: 58.31%; }
.busy-length-8 { width: 66.64%; }
.busy-length-9 { width: 74.97%; }
.busy-length-10 { width: 83.3%; }
.busy-length-11 { width: 91.63%; }
.busy-length-12 { width: 100%; }

/* ltr busy units */
.ltr .busy-indicator .busy-1 { left: 0%; }
.ltr .busy-indicator .busy-2 { left: 8.33%; }
.ltr .busy-indicator .busy-3 { left: 16.66%; }
.ltr .busy-indicator .busy-4 { left: 24.990000000000002%; }
.ltr .busy-indicator .busy-5 { left: 33.32%; }
.ltr .busy-indicator .busy-6 { left: 41.65%; }
.ltr .busy-indicator .busy-7 { left: 49.980000000000004%; }
.ltr .busy-indicator .busy-8 { left: 58.31%; }
.ltr .busy-indicator .busy-9 { left: 66.64%; }
.ltr .busy-indicator .busy-10 { left: 74.97%; }
.ltr .busy-indicator .busy-11 { left: 83.3%; }
.ltr .busy-indicator .busy-12 { left: 91.63%; }


/* rtl busy units */
.rtl .busy-indicator .busy-1 { right: 0%; }
.rtl .busy-indicator .busy-2 { right: 8.33%; }
.rtl .busy-indicator .busy-3 { right: 16.66%; }
.rtl .busy-indicator .busy-4 { right: 24.990000000000002%; }
.rtl .busy-indicator .busy-5 { right: 33.32%; }
.rtl .busy-indicator .busy-6 { right: 41.65%; }
.rtl .busy-indicator .busy-7 { right: 49.980000000000004%; }
.rtl .busy-indicator .busy-8 { right: 58.31%; }
.rtl .busy-indicator .busy-9 { right: 66.64%; }
.rtl .busy-indicator .busy-10 { right: 74.97%; }
.rtl .busy-indicator .busy-11 { right: 83.3%; }
.rtl .busy-indicator .busy-12 { right: 91.63%; }

/* sub: months day view */
#months-day-view  h1 {
  padding: 0.2rem 1.5rem 0;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2.8rem;
  color: #F93700;
  border-bottom: 0.1rem solid #F93700;
}

/* [BB][tabs]*/
#view-selector {
  position: absolute;
  bottom: 0;
  z-index: 20;
}

body[data-path="/month/"] #view-selector > .month,
body[data-path="/week/"] #view-selector > .week,
body[data-path="/day/"] #view-selector > .day {
  background: #fff;
}

body[data-path="/month/"] #view-selector > .month > a,
body[data-path="/week/"] #view-selector > .week > a,
body[data-path="/day/"] #view-selector > .day > a {
  color: #000;
  font-weight: 500;
}

#view-selector > li > a {
  outline: none;
}

#view-selector > li > a:active {
  background-color: #008aaa;
  color: #fff;
}

@keyframes fade-status {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

section[role="status"] {
  display: none;
}

section[role="status"].active {
  display: block;
  animation-name: fade-status;
  animation-delay: 2.5s;
  animation-duration: 1.5s;
}

/* Hide on initial render to prevent flashing */
#settings {
  visibility: hidden;
}

